# telemetry-set

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  docker-compose.yml
.claude/: settings.local.json
config/: README.md
config/loki/: loki-config.yaml
config/otel/: otel-collector-config.yaml
config/prometheus/: prometheus.yaml  prometheus.yml
config/tempo/: tempo-config.yaml
docs/: architecture-diagram.md
examples/: README.md  app.py  pyproject.toml
grafana/: README.md
grafana/dashboards/: emulator-metrics.json  opentelemetry-overview.json
grafana/provisioning/datasources/: datasources.yaml
